--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
-  
+  flutter_secure_storage: ^9.2.2
   syncfusion_flutter_gauges: ^27.1.50
   fl_chart: ^0.69.0
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
+  
 
 dev_dependencies:
   flutter_test:
