--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   fl_chart: ^0.69.0
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
+  # cupertino_icons: ^1.0.8
+  shared_preferences: ^2.3.2
+
   
 
 dev_dependencies:
