--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   shared_preferences: ^2.3.2
   geolocator: ^13.0.1
   flutter_dashboard: ^2.0.1
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,6 +69,7 @@ flutter:
   assets:
     - assets/hcmut.png
     - assets/cardOCB.png
+    - assets/google.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
